Fixed text overflow and added more spacing at the top of the map

--- a/ASEAN.css
+++ b/ASEAN.css
@@ -1,116 +1,51 @@
 .interactive_map {
-    background-color: grey;
-    white-space: nowrap;
-    width: 820px;
-    height: 820px;
-    margin-left: 25%;
-    margin-right: auto;
-    padding: 10px;
-
+  background-color: grey;
+  white-space: nowrap;
+  width: 820px;
+  height: 820px;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding: 10px;
 }
 
 .country_details {
-    /* position: relative; */
-    /* margin-right: 30%;
-    padding-left: 0%; */
-    margin-left: 5%;
-    /* margin-top: 5%; */
-    /* float: left; */
-    display: grid;
-    padding: 10%;
-    /* display: inline-block; */
-    width: 20%;
-    /* margin-top: 20%;     */
+  /* position: relative; */ /* margin-right: 30%; padding-left: 0%; */
+  margin-left: 5%; /* margin-top: 5%; */ /* float: left; */
+  display: grid;
+  font: 12px; /* display: inline-block; */
+  width: 20%; /* margin-top: 20%; */
 }
 
-.details_container{
-    /* width: auto; */
-    display: inline-block;
-    margin-top: 10%;
-    width: 35%;
-    overflow: auto;
-    /* border: 2px solid white; */
+.details_container {
+  /* width: auto; */
+  display: inline-block;
+  width: 45%;
+  overflow: auto; /* border: 2px solid white; */
 }
 
 svg {
-    /* float: left; */
-    display: inline-block;
-    /* width: auto; */
-    margin-top: 10%;
-    /* margin-left: 15%; */
-    border: 2px solid white;
-    /* box-sizing: border-box;
-    overflow: hidden; */
-    /* z-index: -1; */
+  /* float: left; */
+  margin-top: 5%;
+  display: inline-block; /* width: auto; */ /* margin-left: 15%; */
+  border: 2px solid white; /* box-sizing: border-box; overflow: hidden; */ /* z-index: -1; */
 }
 
 .country {
-    stroke:#000000;
-    stroke-opacity:1;
-    stroke-opacity: 0.5;
-    stroke-width: 0.17324010531107584;
-    stroke-dasharray: none;
-    stroke-linecap: butt;
-    stroke-linejoin: miter;
-    stroke-miterlimit: 10;
-    fill:#84ADE9;
-    fill-opacity:1;
-    fill-rule: nonzero;
-    opacity: 1;
+  stroke: #000000;
+  stroke-opacity: 1;
+  stroke-opacity: 0.5;
+  stroke-width: 0.17324010531107584;
+  stroke-dasharray: none;
+  stroke-linecap: butt;
+  stroke-linejoin: miter;
+  stroke-miterlimit: 10;
+  fill: #84ade9;
+  fill-opacity: 1;
+  fill-rule: nonzero;
+  opacity: 1;
 }
 
 .country:hover {
-    fill:rgb(179, 187, 170);
-    stroke:#fafbfc;
-    
+  fill: rgb(179, 187, 170);
+  stroke: #fafbfc;
 }
-
-/* 
-#singapore {
-
-} */
-
-
-
-
-/* #myanmar:hover {
-    fill:red;
-}
-
-#laos:hover {
-    fill:green;
-}
-
-#vietnam:hover {
-    fill:beige;
-}
-
-#thailand:hover {
-    fill:blue;
-}
-
-#cambodia:hover {
-    fill:yellow;
-}
-
-#malaysia:hover {
-    fill:hotpink;
-}
-
-#indonesia:hover {
-    fill:brown;
-}
-
-
-
-#brunei:hover {
-    fill:black;
-}
-
-#philippines:hover {
-    fill:lavender;
-}
-
-.invisible {
-    color: transparent;
-} */
